# embedding-cache

./: .gitignore  CLAUDE.md  LICENSE  README.md  manifest  pyproject.toml  vector-embedding-cache.md
.bd/: interactions.jsonl  last-touched  metadata.json  push-state.json
.github/workflows/: ci.yml
clients/go/: README.md  go.mod
clients/go/vectorembed/: client.go  client_test.go  doc.go  errors.go  errors_test.go  http.go  http_test.go  options.go  options_test.go  types.go  types_test.go
clients/js/: README.md  package-lock.json  package.json  tsconfig.json
clients/js/src/: client.ts  errors.ts  fetch.ts  index.ts  types.ts
clients/js/tests/: client.test.ts  errors.test.ts  fetch.test.ts  index.test.ts
clients/python/: README.md  pyproject.toml
clients/python/src/vector_embed_client/: __init__.py  async_client.py  client.py  errors.py  http.py  types.py
clients/python/tests/: test_async_client.py  test_client.py  test_errors.py  test_http.py  test_types.py
docs/plans/: 2026-01-09-embedding-cache-mvp-implementation.md  2026-01-09-model-comparison-design.md  2026-01-09-multi-model-comparison-implementation.md  2026-01-09-python-client-library-design.md  2026-01-18-phase1-library-polish.md  2026-01-18-roadmap-design.md  2026-01-19-phase2-hosted-backend-design.md  2026-01-19-phase2-implementation.md  2026-01-21-admin-dashboard-design.md  2026-01-21-pre-seeding-design.md  2026-01-21-pre-seeding-implementation.md  2026-01-22-cache-compression-design.md  2026-01-22-go-client-library-design.md  2026-01-22-js-client-library-design.md  2026-01-22-python-client-library-design.md
embedding_cache/: __init__.py  cache.py  cli.py  providers.py  storage.py  utils.py
examples/: basic_usage.py  batch_processing.py  model_comparison.py
scripts/: generate_preseed.py
server/: README.md  alembic.ini  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 001_add_pgvector_partitions.py  002_add_is_admin_column.py
server/app/: admin_auth.py  auth.py  cache.py  cli.py  compute.py  config.py  crypto.py  database.py  main.py  models.py  normalize.py  passthrough.py  rate_limit.py  redis_client.py  schemas.py  similarity.py
server/app/routes/: __init__.py  admin.py  embed.py  providers.py  search.py  users.py
server/app/static/css/: admin.css
server/app/templates/admin/: api_key_row.html  api_keys.html  base.html  dashboard.html  login.html  user_detail.html  users.html  users_table.html
server/scripts/: __init__.py  create_hnsw_indexes.py  migrate_to_pgvector.py  seed.py  swap_tables.py
server/tests/: conftest.py  test_admin_auth.py  test_admin_routes.py  test_admin_stats.py  test_auth.py  test_cache.py  test_cli.py  test_compute.py  test_cors.py  test_crypto.py  test_csrf.py  test_embed_routes.py  test_models.py  test_normalize.py  test_passthrough.py  test_payload_size.py  test_pgvector_integration.py  test_rate_limit.py  test_routes_users.py  test_schemas.py  test_search_api.py  test_similarity.py  test_startup_validation.py
tests/: conftest.py  test_api.py  test_cache.py  test_cli.py  test_error_handling.py  test_integration.py  test_normalize.py  test_preseed.py  test_providers.py  test_storage.py  test_utils.py
vector_embed_cache/: __init__.py  cache.py  cli.py  normalize.py  preseed.py  storage.py
