[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embedding-cache"
version = "0.1.0"
description = "Local and remote caching for embedding vectors"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "numpy>=1.20",
    "msgpack>=1.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.3",
    "torch>=2.0",
    "einops>=0.8",
]
openai = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
