[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vector-embed-cache"
version = "0.1.0"
description = "Cache embedding vectors locally with smart fallback to remote compute"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Gabe", email = "gabe@signalnine.net"}
]
keywords = ["embeddings", "cache", "vectors", "nlp", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
    "msgpack>=1.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=2.3",
    "torch>=2.0",
    "einops>=0.8",
]
openai = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
    "wordfreq>=3.0",
]

[project.scripts]
vector-embed-cache = "vector_embed_cache.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["vector_embed_cache"]

[tool.hatch.build.targets.wheel.force-include]
"vector_embed_cache/data" = "vector_embed_cache/data"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
