[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vector-embed-cache-client"
version = "0.1.0"
description = "Python client for vector-embed-cache API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "vector-embed-cache contributors" }
]
keywords = ["embeddings", "cache", "vector", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/vector-embed-cache"
Documentation = "https://github.com/your-org/vector-embed-cache#readme"
Repository = "https://github.com/your-org/vector-embed-cache"

[tool.hatch.build.targets.wheel]
packages = ["src/vector_embed_client"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
